spacing corrections

--- a/styles/signin.css
+++ b/styles/signin.css
@@ -22,7 +22,7 @@ main {
 	justify-content: center;
 	align-items: center;
 	margin: 0;
-	padding: 2rem;
+	padding: 2.5rem 2rem 1rem 2rem ;
 	background-color: #FFF;
 	border: 2px solid #CCC;
 	border-radius: 0.25rem;
@@ -50,6 +50,9 @@ div {
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
+}
+
+div:first-of-type {
 	margin: 1.5rem 0;
 }
 
@@ -81,13 +84,10 @@ form input {
 	width: 100%;
 	border-radius: 0.25rem;
 	height: 2.5rem;
+	margin-bottom: 0.75rem;
 	padding: 0.5rem;
 	font-size: 1rem;
 	border: 2px solid #CCC;
-}
-
-form input:first-of-type {
-	margin-bottom: 0.75rem;
 }
 
 form input:focus {
